# DigitalPhotoFrame

./: .clinerules  .dockerignore  .gitignore  .project  .worktreeinclude  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_SKILLS.md  DOCKER.md  Dockerfile  LICENSE.md  PROJECT_HANDOFF.md  PhotoFrame.py  README.md  Readme.md  Requirments.txt  Settings.py  app.py  app_modes.py  config.json  config.py  deploy.md  docker-compose.pi.yml  docker-compose.yml  iFrame.py  install.sh  install_docker_kiosk.sh  install_photoframe_service.sh  install_services.sh  logging_setup.py  main.py  metadata.json  openmeteo_weather_cache.json  photoframe_settings.example.json  photoframe_settings.json  pom.xml  pyproject.toml  requirements-docker.txt  (+2 more)
.claude/: settings.json
DesktopApp/: DesktopApp.py  PhotoFrame.py  PhotoFrameDesktopApp.py  app.py  autoupdater.py  config.py  docker-compose.yml  iFrame.py  index.html  install_photoframe_service.sh  photoframe-desktop.service  photoframe_settings.json  photoframe_view.py  screen_scheduler.py  settings.json  settings_form.py  utils_net.py  weather_adapter.py
DigitalPhotoFrame.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Effects/: AlphaDissolveEffect.py  BarnDoorCloseEffect.py  BarnDoorOpenEffect.py  BlindsEffect.py  CheckerboardEffect.py  IrisCloseEffect.py  IrisOpenEffect.py  LinearEffect.py  PixelDissolveEffect.py  PlainEffect.py  ScrollEffect.py  ShrinkEffect.py  StretchEffect.py  WipeEffect.py  ZoomInEffect.py  ZoomOutEffect.py
FrameGUI/: photoframe_view.py  photoframe_view_pygame.py  photoframe_view_qt.py  (+1 more)
(+200 files in other folders)
