[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DigitalPhotoFrame"
version = "1.0.0"
description = "A modern, high-performance photo-frame engine with a web UI."
readme = "README.md"
authors = [
  { name = "Alon", email = "alon@example.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "Pillow",
    "numpy",
    "pandas",
    "opencv-python",
    "flask",
    "flask_cors",
    "watchdog",
    "requests",
    "paho.mqtt",
    "psutil",
    "qrcode[pil]",
    "PySide6",
    "pyheif",
    "tqdm",
    "pillow-heif",
]
requires-python = ">=3.8"

[project.urls]
"Homepage" = "https://github.com/alon/DigitalPhotoFrame"
"Bug Tracker" = "https://github.com/alon/DigitalPhotoFrame/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["FrameServer*", "FrameGUI*", "Utilities*", "WebAPI*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["Tests"]
python_files = "test_*.py"
